<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:fillViewport="true" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".MainActivity" 
	    android:orientation="vertical" >
	
	    <EditText android:id="@+id/name_field"
	        android:inputType="textCapWords"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/name_message" />
	    
	    <EditText android:id="@+id/phone_field"
	        android:inputType="phone"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/phone_message" />
	        
	    <EditText android:id="@+id/extension_field"
	        android:inputType="number"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/extension_message" />
	            
	    <EditText android:id="@+id/email_field"
	        android:inputType="textEmailAddress"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/email_message">
	        <requestFocus />
	    </EditText>
	    
	    <Button android:id="@+id/scan_barcode_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/scan_barcode_button" 
	        android:onClick="onScanBarcodeButtonClick" />
	    
	    <!-- <TextView android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/tvStatus" /> -->
	    
	    <EditText android:id="@+id/pole_number_field"
	        android:inputType="number"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/pole_number_message" />
	    
	    <EditText android:id="@+id/address_field"
	        android:inputType="textPostalAddress|textCapWords"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/address_message" />
	    
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    
            <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/problem_type_message" />
		        
		    <Spinner android:id="@+id/spinner_problem_type"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:entries="@array/problem_type" />
		    
	    </LinearLayout>
	            
	    <EditText android:id="@+id/problem_description_field"
	        android:inputType="textMultiLine|textCapSentences"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/comments_message" />            
	    
	    <Button android:id="@+id/submit_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/submit_button" 
	        android:onClick="onSubmitTroubleReportButtonClick" />
	    
	    <Button android:id="@+id/clear_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/clear_button" 
	        android:onClick="onClearFormButtonClick" />
	
	</LinearLayout>
</ScrollView>